Fix css in panorama on mobile

--- a/app/styles/panorama.css
+++ b/app/styles/panorama.css
@@ -23,5 +23,6 @@
 @media only screen and (max-width : 769px) {
 	.panorama {
     height: calc(100% - 45px);
+    margin-top: 0px;
 	}
 }
